--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,9 @@
 server {
     listen ${PORT};
     server_name _;
+
     root /var/www/html/public;
-
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-Content-Type-Options "nosniff";
-
-    index index.php;
+    index index.php index.html;
 
     charset utf-8;
 
@@ -14,18 +11,13 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    location = /favicon.ico { access_log off; log_not_found off; }
-    location = /robots.txt  { access_log off; log_not_found off; }
-
-    error_page 404 /index.php;
-
     location ~ \.php$ {
-        fastcgi_pass 127.0.0.1:9000;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_pass 127.0.0.1:9000;
     }
 
-    location ~ /\.(?!well-known).* {
+    location ~ /\. {
         deny all;
     }
 }
