--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -1,11 +1,9 @@
 server {
-    listen ${PORT};
+    listen 0.0.0.0:${PORT};
     server_name _;
 
     root /var/www/html/public;
     index index.php index.html;
-
-    charset utf-8;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
